k8s/webapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: swa-demo-webapp
  namespace: swa-demo
  labels:
    app: swa-demo-webapp
spec:
  type: NodePort
  selector:
    app: swa-demo-webapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
